--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -19,6 +19,22 @@
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  header{
+    background-color: #cfd4d7;
+    padding: 25px;
+    color: black;
+    align-items: center;
+
+    
+  }
   ul,
   li {
     margin: 0;
@@ -61,7 +77,7 @@
         -ms-user-select: none;
             user-select: none;
     position: relative;
-    width: 222px;
+    width: 180px;
   }
   .dd-header {
     display: -webkit-box;
@@ -145,3 +161,5 @@
     border: 1px solid #ccc;
     border-top: none;
   }
+
+  
