--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -70,6 +70,7 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     width: 90%;
+    padding-bottom: 40px;
   }
   .dd-wrapper {
     -webkit-user-select: none;
@@ -82,7 +83,9 @@
   .dd-header {
     display: -webkit-box;
     display: -ms-flexbox;
+    
     display: flex;
+    
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -95,6 +98,7 @@
     cursor: default;
     position: relative;
     background-color: #fff;
+    font-size: 18px;
   }
   .dd-header span {
     margin-right: 20px;
@@ -160,6 +164,10 @@
   .dd-wrapper-single .dd-list {
     border: 1px solid #ccc;
     border-top: none;
+  }
+
+  .button-row {
+    padding: 20px;
   }
 
   
